--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
     "@types/lodash": "^4.14.178",
@@ -17,6 +20,7 @@
     "sass": "^1.48.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.0.8",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
