--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@types/lodash": "^4.14.178",
@@ -21,6 +23,8 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.8",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
@@ -35,6 +39,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
